--- a/pages/index.html
+++ b/pages/index.html
@@ -12,7 +12,11 @@
     <main>
         <div class="inputs">
             <h2>Enter number of pixels</h2>
-            <input type="number">
+            <div id="slider-n-value">
+                <input type="range" min="1" max="64" value="32" oninput="this.nextElementSibling.value = this.value" class="slider">
+                <output>32</output>
+            </div>
+
             <h2>Pick a color</h2>
             <input type="color" id="color_picker">
             <button>Draw!</button>
