--- a/pages/index.html
+++ b/pages/index.html
@@ -13,18 +13,18 @@
         <div class="inputs">
             <h2>Enter number of pixels</h2>
             <div id="slider-n-value">
-                <input type="range" min="1" max="64" value="32" oninput="this.nextElementSibling.value = this.value" class="slider">
+                <input type="range" min="1" max="64" value="32" oninput="this.nextElementSibling.value = this.value" class="slider" id="amount-slider">
                 <output>32</output>
             </div>
 
             <h2>Pick a color</h2>
             <input type="color" id="color_picker">
-            <button>Draw!</button>
+            <button onclick="populateCanvas()" src  >Draw!</button>
         </div>
         <div id="pixel-container">
 
         </div>
     </main>
-    <script src="../js/script.js"></script>
+    <script type="text/javascript" src="../js/script.js"></script>
 </body>
 </html>
