Add clear button for the canvas

--- a/pages/index.html
+++ b/pages/index.html
@@ -20,6 +20,7 @@
             <h2>Pick a color</h2>
             <input type="color" id="color_picker">
             <button onclick="populateCanvas()" src  >Draw!</button>
+            <button onclick="clearCanvas()" src  >Clear</button>
         </div>
         <div id="pixel-container">
 
